AC_INIT([Simple ATI Force Sensor Test Program], 0.1)

PACKAGE=atitest
VERSION=0.1.0

AM_INIT_AUTOMAKE

ATIFT_REQUIRED_VERSION=0.1
AC_CONFIG_FILES([Makefile])
PKG_CHECK_MODULES([ATIFT], [atift-0.1 >= 0.1.0])
PKG_CHECK_MODULES([COMEDI], [comedilib >= 0.7.22])
AC_SUBST(ATIFT_CFLAGS)
AC_SUBST(ATIFT_LIBS)
AC_SUBST(COMEDI_CFLAGS)
AC_SUBST(COMEDI_LIBS)

AC_PROG_CC
AC_PROG_INSTALL
AC_OUTPUT

